Use theme box-shadow colour on search input

--- a/demo/app/templates/base.html
+++ b/demo/app/templates/base.html
@@ -4,10 +4,12 @@
     <meta charset="UTF-8">
     <title>MIZDB TomSelect Demo</title>
     <link href="{% static 'bootstrap/dist/css/bootstrap.css' %}" rel="stylesheet">
+    <link href="{% static 'bootswatch/dist/flatly/bootstrap.css' %}" rel="stylesheet">
     <script src="{% static 'bootstrap/dist/js/bootstrap.bundle.js' %}"></script>
     <script src="{% static 'tom-select/dist/js/tom-select.complete.js' %}"></script>
     <link href="{% static 'tom-select/dist/css/tom-select.bootstrap5.css' %}" rel="stylesheet">
     <script src="{% static 'mizdb-tomselect/js/mizdb-tomselect-init.js' %}"></script>
+    <link href="{% static 'mizdb-tomselect/css/box-shadow-fix.css' %}" rel="stylesheet">
 </head>
 <body>
 <div class="container">
