--- a/demo/app/templates/base.html
+++ b/demo/app/templates/base.html
@@ -14,6 +14,7 @@
 <body>
 <div class="container">
     <form>
+        {% csrf_token %}
         {{ form.as_div }}
         <button type="submit" class="btn btn-success">Save</button>
     </form>
