Add widget media

--- a/demo/app/templates/base.html
+++ b/demo/app/templates/base.html
@@ -6,10 +6,7 @@
     <link href="{% static 'bootstrap/dist/css/bootstrap.css' %}" rel="stylesheet">
     <link href="{% static 'bootswatch/dist/flatly/bootstrap.css' %}" rel="stylesheet">
     <script src="{% static 'bootstrap/dist/js/bootstrap.bundle.js' %}"></script>
-    <script src="{% static 'tom-select/dist/js/tom-select.complete.js' %}"></script>
-    <link href="{% static 'tom-select/dist/css/tom-select.bootstrap5.css' %}" rel="stylesheet">
-    <script src="{% static 'mizdb-tomselect/js/mizdb-tomselect-init.js' %}"></script>
-    <link href="{% static 'mizdb-tomselect/css/mizselect.css' %}" rel="stylesheet">
+    {{ form.media }}
 </head>
 <body>
 <div class="container">
