Fix edit button position and tweak css

--- a/src/mizdb_tomselect/static/mizdb_tomselect/css/mizselect.css
+++ b/src/mizdb_tomselect/static/mizdb_tomselect/css/mizselect.css
@@ -19,8 +19,11 @@
 
 .edit {
     border-left: 1px solid #dee2e6;
-    margin-left: 5px;
     padding: 0 5px;
+}
+
+.edit:not(:last-child) {
+  margin-left: 5px;
 }
 
 .edit:hover {
