--- a/demo/app/templates/base.html
+++ b/demo/app/templates/base.html
@@ -1,4 +1,5 @@
-{% load static %}<!DOCTYPE html>
+<!DOCTYPE html>
+{% load static %}
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -10,11 +11,25 @@
 </head>
 <body>
 <div class="container">
-    <form>
-        {% csrf_token %}
-        {{ form.as_div }}
-        <button type="submit" class="btn btn-success">Save</button>
-    </form>
+<nav class="navbar navbar-expand-lg bg-body-tertiary">
+  <div class="container-fluid">
+    <a class="navbar-brand" href="{% url 'index' %}"><svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-home"><path d="M3 9l9-7 9 7v11a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2z"></path><polyline points="9 22 9 12 15 12 15 22"></polyline></svg> Index</a>
+    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+    <div class="collapse navbar-collapse" id="navbarSupportedContent">
+      <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+          {% for view_class, name, label, description in demo_views %}
+            <li class="nav-item">
+              <a class="nav-link" aria-current="page" href="{% url name %}" title="{{ description }}">{{ label }}</a>
+            </li>
+          {% endfor %}
+      </ul>
+    </div>
+  </div>
+</nav>
+{% block content %}
+{% endblock %}
 </div>
 </body>
 </html>
