popup response: remove redundant script tag

--- a/src/mizdb_tomselect/templates/mizdb_tomselect/popup_response.html
+++ b/src/mizdb_tomselect/templates/mizdb_tomselect/popup_response.html
@@ -2,9 +2,5 @@
 <html>
   <head><title>{% translate 'Popup closing…' %}</title></head>
   <body>
-  </script>
-    <script id="popup-response-data"
-            src="{% static "mizdb_tomselect/js/popup_response.js" %}"
-            data-popup-response="{{ popup_response_data }}">
-    </script>
+    <script id="popup-response-data" src="{% static 'mizdb_tomselect/js/popup_response.js' %}" data-popup-response="{{ popup_response_data }}"></script>
   </body>
