--- a/src/mizdb_tomselect/templates/mizdb_tomselect/popup_response.html
+++ b/src/mizdb_tomselect/templates/mizdb_tomselect/popup_response.html
@@ -4,3 +4,4 @@
   <body>
     <script id="popup-response-data" src="{% static 'mizdb_tomselect/js/popup_response.js' %}" data-popup-response="{{ popup_response_data }}"></script>
   </body>
+</html>
